<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. David de Andrés and Juan Carlos Ruiz, DISCA - UPV, Development of apps for mobile devices.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="labs.sdm.l0601_fragments.activities.MainActivity">

    <!--Buttons controlling what Fragment should be displayed in the first FrameLayout-->
    <LinearLayout
        style="?android:buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/rbLogin"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="updateFragments"
            android:text="@string/main_login" />

        <Button
            android:id="@+id/rbSignIn"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="updateFragments"
            android:text="@string/main_sign_in" />

        <Button
            android:id="@+id/rbClear1"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:onClick="updateFragments"
            android:text="@string/main_clear" />
    </LinearLayout>

    <!--Buttons controlling what Fragment should be displayed in the second FrameLayout-->
    <LinearLayout
        style="?android:buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/rbListStrings"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:onClick="updateFragments"
            android:text="@string/main_list_names" />

        <Button
            android:id="@+id/rbGridImages"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="updateFragments"
            android:text="@string/main_grid_images" />

        <Button
            android:id="@+id/rbClear2"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:onClick="updateFragments"
            android:text="@string/main_clear" />
    </LinearLayout>

    <!--FrameLayout to display the LogInFragment or SignInFragment-->
    <FrameLayout
        android:id="@+id/flFragment1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <!--FrameLayout to display the ListStringFragment or GridImageFragment-->
    <FrameLayout
        android:id="@+id/flFragment2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" />

</LinearLayout>
